5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3998/executions/1756_1576.log
== TEST (2019-05-22 13:30:57) 
-- CODE:
from numpy import*
a = array(eval(input("jogadas de Eusapia:" )))
a = array(eval(input("jogadas de Barsanulfo:" )))

while(11== "Pedra") or (22 == "Papel") or (33 == "Tesoura"):
	
-- ERROR:
File "XXXX", line 7
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 13:31:02) 
-- CODE:
from numpy import*
a = array(eval(input("jogadas de Eusapia:" )))
a = array(eval(input("jogadas de Barsanulfo:" )))

while(11== "Pedra") or (22 == "Papel") or (33 == "Tesoura"):
-- ERROR:
File "XXXX", line 6
    
                                                                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:37:52) 
-- CODE:
from numpy import*
a = array(eval(input("jogadas de Eusapia:" )))
b = array(eval(input("jogadas de Barsanulfo:" )))

e= 0    #variavel contadora de posicao dos vetores
h= 0      #variavel contadora vitoria de eusapia
i= 0       #variavel contadora vitoria de barsanulfo

while(e < size(a)):
	e =e +1
	if(a [e]==11)and(b [e]==22):
		i = i+1
	elif(a[e]==22)and(b[e]==33):
		i= i +1
	elif(a[e]==33)and(b[e]==11):
		i=i+1
	elif(a[e]==11)and(b[e]==33):
		h=i+1
	elif(a[e]==22)and(b[e]==11):
		h=i+1	
	elif(a[e]==33)and(b[e]==22):
		h=i+1
if(h>i):
	print("Eusapia")
else:
	print("Barsanulfo")

print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:40:04) 
-- CODE:
from numpy import*
a = array(eval(input("jogadas de Eusapia:" )))
b = array(eval(input("jogadas de Barsanulfo:" )))

e= 0    #variavel contadora de posicao dos vetores
h= 0      #variavel contadora vitoria de eusapia
i= 0       #variavel contadora vitoria de barsanulfo

while(e < size(a)):
	e =e +1
	if(a[e]==11)and(b[e]==22):
		i = i+1
	elif(a[e]==22)and(b[e]==33):
		i= i +1
	elif(a[e]==33)and(b[e]==11):
		i=i+1
	elif(a[e]==11)and(b[e]==33):
		h=h+1
	elif(a[e]==22)and(b[e]==11):
		h=h+1	
	elif(a[e]==33)and(b[e]==22):
		h=h+1
if(h>i):
	print("Eusapia")
else:
	print("Barsanulfo")

print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:43:35) 
-- CODE:
from numpy import*
a = array(eval(input("jogadas de Eusapia:" )))
b = array(eval(input("jogadas de Barsanulfo:" )))

e= 0    #variavel contadora de posicao dos vetores
h= 0      #variavel contadora vitoria de eusapia
i= 0       #variavel contadora vitoria de barsanulfo

while(e < size(a)):
	if(a[e]==11)and(b[e]==22):
		i = i+1
	elif(a[e]==22)and(b[e]==33):
		i= i +1
	elif(a[e]==33)and(b[e]==11):
		i=i+1
	elif(a[e]==11)and(b[e]==33):
		h=h+1
	elif(a[e]==22)and(b[e]==11):
		h=h+1	
	elif(a[e]==33)and(b[e]==22):
		h=h+1
	e=e+1
if(h>i):
	print("Eusapia")
else:
	print("Barsanulfo")

print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 14:43:38) 
-- CODE:
from numpy import*
a = array(eval(input("jogadas de Eusapia:" )))
b = array(eval(input("jogadas de Barsanulfo:" )))

e= 0    #variavel contadora de posicao dos vetores
h= 0      #variavel contadora vitoria de eusapia
i= 0       #variavel contadora vitoria de barsanulfo

while(e < size(a)):
	if(a[e]==11)and(b[e]==22):
		i = i+1
	elif(a[e]==22)and(b[e]==33):
		i= i +1
	elif(a[e]==33)and(b[e]==11):
		i=i+1
	elif(a[e]==11)and(b[e]==33):
		h=h+1
	elif(a[e]==22)and(b[e]==11):
		h=h+1	
	elif(a[e]==33)and(b[e]==22):
		h=h+1
	e=e+1
if(h>i):
	print("Eusapia")
else:
	print("Barsanulfo")

print(e)
-- EXECUTION TIME:
0.482225
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
Eusapia
12
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
Barsanulfo
10
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
Barsanulfo
18
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:43:40) 
-- CODE:
from numpy import*
a = array(eval(input("jogadas de Eusapia:" )))
b = array(eval(input("jogadas de Barsanulfo:" )))

e= 0    #variavel contadora de posicao dos vetores
h= 0      #variavel contadora vitoria de eusapia
i= 0       #variavel contadora vitoria de barsanulfo

while(e < size(a)):
	if(a[e]==11)and(b[e]==22):
		i = i+1
	elif(a[e]==22)and(b[e]==33):
		i= i +1
	elif(a[e]==33)and(b[e]==11):
		i=i+1
	elif(a[e]==11)and(b[e]==33):
		h=h+1
	elif(a[e]==22)and(b[e]==11):
		h=h+1	
	elif(a[e]==33)and(b[e]==22):
		h=h+1
	e=e+1
if(h>i):
	print("Eusapia")
else:
	print("Barsanulfo")

print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:45:23) 
-- CODE:
from numpy import*
a = array(eval(input("jogadas de Eusapia:" )))
b = array(eval(input("jogadas de Barsanulfo:" )))

e= 0    #variavel contadora de posicao dos vetores
h= 0      #variavel contadora vitoria de eusapia
i= 0       #variavel contadora vitoria de barsanulfo

while(e < size(a)):
	if(a[e]==11)and(b[e]==22):
		i = i+1
	elif(a[e]==22)and(b[e]==33):
		i= i +1
	elif(a[e]==33)and(b[e]==11):
		i=i+1
	elif(a[e]==11)and(b[e]==33):
		h=h+1
	elif(a[e]==22)and(b[e]==11):
		h=h+1	
	elif(a[e]==33)and(b[e]==22):
		h=h+1
	else:
		i=i+0
		h=h+0
	e=e+1
if(h>i):
	print("Eusapia")
else:
	print("Barsanulfo")

print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 14:45:25) 
-- CODE:
from numpy import*
a = array(eval(input("jogadas de Eusapia:" )))
b = array(eval(input("jogadas de Barsanulfo:" )))

e= 0    #variavel contadora de posicao dos vetores
h= 0      #variavel contadora vitoria de eusapia
i= 0       #variavel contadora vitoria de barsanulfo

while(e < size(a)):
	if(a[e]==11)and(b[e]==22):
		i = i+1
	elif(a[e]==22)and(b[e]==33):
		i= i +1
	elif(a[e]==33)and(b[e]==11):
		i=i+1
	elif(a[e]==11)and(b[e]==33):
		h=h+1
	elif(a[e]==22)and(b[e]==11):
		h=h+1	
	elif(a[e]==33)and(b[e]==22):
		h=h+1
	else:
		i=i+0
		h=h+0
	e=e+1
if(h>i):
	print("Eusapia")
else:
	print("Barsanulfo")

print(e)
-- EXECUTION TIME:
0.497143
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
Eusapia
12
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
Barsanulfo
10
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
Barsanulfo
18
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:45:25) 
-- CODE:
from numpy import*
a = array(eval(input("jogadas de Eusapia:" )))
b = array(eval(input("jogadas de Barsanulfo:" )))

e= 0    #variavel contadora de posicao dos vetores
h= 0      #variavel contadora vitoria de eusapia
i= 0       #variavel contadora vitoria de barsanulfo

while(e < size(a)):
	if(a[e]==11)and(b[e]==22):
		i = i+1
	elif(a[e]==22)and(b[e]==33):
		i= i +1
	elif(a[e]==33)and(b[e]==11):
		i=i+1
	elif(a[e]==11)and(b[e]==33):
		h=h+1
	elif(a[e]==22)and(b[e]==11):
		h=h+1	
	elif(a[e]==33)and(b[e]==22):
		h=h+1
	else:
		i=i+0
		h=h+0
	e=e+1
if(h>i):
	print("Eusapia")
else:
	print("Barsanulfo")

print(e)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:47:01) 
-- CODE:
from numpy import*
a = array(eval(input("jogadas de Eusapia:" )))
b = array(eval(input("jogadas de Barsanulfo:" )))

e= 0    #variavel contadora de posicao dos vetores
h= 0      #variavel contadora vitoria de eusapia
i= 0       #variavel contadora vitoria de barsanulfo

while(e < size(a)):
	if(a[e]==11)and(b[e]==22):
		i = i+1
	elif(a[e]==22)and(b[e]==33):
		i= i +1
	elif(a[e]==33)and(b[e]==11):
		i=i+1
	elif(a[e]==11)and(b[e]==33):
		h=h+1
	elif(a[e]==22)and(b[e]==11):
		h=h+1	
	elif(a[e]==33)and(b[e]==22):
		h=h+1
	
	e=e+1
print(e)
if(h>i):
	print("Eusapia")
elif(h<i):
	print("Barsanulfo")
else:
	print("EMPATE")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:47:53) 
-- CODE:
from numpy import*
a = array(eval(input("jogadas de Eusapia:" )))
b = array(eval(input("jogadas de Barsanulfo:" )))

e= 0    #variavel contadora de posicao dos vetores
h= 0      #variavel contadora vitoria de eusapia
i= 0       #variavel contadora vitoria de barsanulfo

while(e < size(a)):
	if(a[e]==11)and(b[e]==22):
		i = i+1
	elif(a[e]==22)and(b[e]==33):
		i= i +1
	elif(a[e]==33)and(b[e]==11):
		i=i+1
	elif(a[e]==11)and(b[e]==33):
		h=h+1
	elif(a[e]==22)and(b[e]==11):
		h=h+1	
	elif(a[e]==33)and(b[e]==22):
		h=h+1
	
	e=e+1
print(e)
if(h>i):
	print("Eusapia")
elif(h<i):
	print("Barsanulfo")
else:
	print("EMPATE")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:47:53) 
-- CODE:
from numpy import*
a = array(eval(input("jogadas de Eusapia:" )))
b = array(eval(input("jogadas de Barsanulfo:" )))

e= 0    #variavel contadora de posicao dos vetores
h= 0      #variavel contadora vitoria de eusapia
i= 0       #variavel contadora vitoria de barsanulfo

while(e < size(a)):
	if(a[e]==11)and(b[e]==22):
		i = i+1
	elif(a[e]==22)and(b[e]==33):
		i= i +1
	elif(a[e]==33)and(b[e]==11):
		i=i+1
	elif(a[e]==11)and(b[e]==33):
		h=h+1
	elif(a[e]==22)and(b[e]==11):
		h=h+1	
	elif(a[e]==33)and(b[e]==22):
		h=h+1
	
	e=e+1
print(e)
if(h>i):
	print("Eusapia")
elif(h<i):
	print("Barsanulfo")
else:
	print("EMPATE")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 14:48:14) 
-- CODE:
from numpy import*
a = array(eval(input("jogadas de Eusapia:" )))
b = array(eval(input("jogadas de Barsanulfo:" )))

e= 0    #variavel contadora de posicao dos vetores
h= 0      #variavel contadora vitoria de eusapia
i= 0       #variavel contadora vitoria de barsanulfo

while(e < size(a)):
	if(a[e]==11)and(b[e]==22):
		i = i+1
	elif(a[e]==22)and(b[e]==33):
		i= i +1
	elif(a[e]==33)and(b[e]==11):
		i=i+1
	elif(a[e]==11)and(b[e]==33):
		h=h+1
	elif(a[e]==22)and(b[e]==11):
		h=h+1	
	elif(a[e]==33)and(b[e]==22):
		h=h+1
	
	e=e+1
print(e)
if(h>i):
	print("Eusapia")
elif(h<i):
	print("Barsanulfo")
else:
	print("EMPATE")

-- EXECUTION TIME:
0.326429
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
Eusapia
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
Barsanulfo
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 14:48:32) 
-- CODE:
from numpy import*
a = array(eval(input("jogadas de Eusapia:" )))
b = array(eval(input("jogadas de Barsanulfo:" )))

e= 0    #variavel contadora de posicao dos vetores
h= 0      #variavel contadora vitoria de eusapia
i= 0       #variavel contadora vitoria de barsanulfo

while(e < size(a)):
	if(a[e]==11)and(b[e]==22):
		i = i+1
	elif(a[e]==22)and(b[e]==33):
		i= i +1
	elif(a[e]==33)and(b[e]==11):
		i=i+1
	elif(a[e]==11)and(b[e]==33):
		h=h+1
	elif(a[e]==22)and(b[e]==11):
		h=h+1	
	elif(a[e]==33)and(b[e]==22):
		h=h+1
	
	e=e+1
print(e)
if(h>i):
	print("EUSAPIA")
elif(h<i):
	print("BARSANULFO")
else:
	print("EMPATE")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 14:48:35) 
-- CODE:
from numpy import*
a = array(eval(input("jogadas de Eusapia:" )))
b = array(eval(input("jogadas de Barsanulfo:" )))

e= 0    #variavel contadora de posicao dos vetores
h= 0      #variavel contadora vitoria de eusapia
i= 0       #variavel contadora vitoria de barsanulfo

while(e < size(a)):
	if(a[e]==11)and(b[e]==22):
		i = i+1
	elif(a[e]==22)and(b[e]==33):
		i= i +1
	elif(a[e]==33)and(b[e]==11):
		i=i+1
	elif(a[e]==11)and(b[e]==33):
		h=h+1
	elif(a[e]==22)and(b[e]==11):
		h=h+1	
	elif(a[e]==33)and(b[e]==22):
		h=h+1
	
	e=e+1
print(e)
if(h>i):
	print("EUSAPIA")
elif(h<i):
	print("BARSANULFO")
else:
	print("EMPATE")

-- EXECUTION TIME:
0.524935
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
